--- a/src/components/MovieDetailsNavigation/MovieDetailsNavigation.module.css
+++ b/src/components/MovieDetailsNavigation/MovieDetailsNavigation.module.css
@@ -1,3 +1,17 @@
+.wrapper {
+  border-bottom: 1px solid rgba(128, 128, 128, 0.716);
+  margin-bottom: 15px;
+}
+
+.text {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.list {
+  margin-bottom: 10px;
+}
+
 .link {
   text-decoration: none;
 }
