--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,5 +1,18 @@
+.header {
+  box-shadow: 0 2px 5px rgba(128, 128, 128, 0.55);
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.list {
+  display: flex;
+  gap: 10px;
+}
+
 .link {
   text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .active {
